# japanese-app

./: .gitignore  LICENSE  README.md
docs/: README.md  architecture.md  overview.md  setup.md
scripts/: .gitignore  Cargo.toml  README.md
scripts/prompts/: base-info.md
