[package]
name = "scripts"
version = "0.1.0"
edition = "2024"

# 対象ディレクトリのファイル読み込みとセーブ
[[bin]]
name = "template"
path = "bin/00_template.rs"

# AIによるデータ生成
[[bin]]
name = "create_questions"
path = "bin/0_create_questions.rs"

# AI生成データを型にバインドして保存する
[[bin]]
name = "json_read_to_struct"
path = "bin/1_json_read_to_struct.rs"


[dependencies]
chrono = "0.4.40"
env_logger = "0.11.6"
google-generative-ai-rs = { version = "0.3.4", features = ["beta"] }
log = "0.4.26"
serde = "1.0.218"
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
